testsuite/tests/splice-imports/SI16.hs
{-# LANGUAGE TemplateHaskellQuotes #-}
{-# LANGUAGE NoPathCSP #-}
module SI16 where

x = ()

foo = 'x


